K8s yaml files/deploystorage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-app
spec:
 replicas: 1
 selector:
  matchLabels:
    app: busybox
 template:
    metadata:
      labels:
        app: busybox
    spec:
     volumes:
     - name: my-volume-lms
       persistentVolumeClaim:
        claimName: lms-logs-pvc
     containers:
      - name: busybox
        image: busybox      
        command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
        volumeMounts:
        - name: my-volume-lms
          mountPath: "/lms"
