K8s yaml files/existing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"dev-app","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"dev-app"}},"template":{"metadata":{"labels":{"app":"dev-app"}},"spec":{"containers":[{"image":"devopswithcloudhub/nginx:blue","name":"nginx"}]}}}}
  creationTimestamp: "2026-08-26T20:13:55Z"
  generation: 1
  name: dev-app
  namespace: default
  resourceVersion: "1787775237586943015"
  uid: df39b8e1-f283-4552-87cf-f9dfcf659265
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dev-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - image: devopswithcloudhub/nginx:blue
        imagePullPolicy: IfNotPresent
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-08-26T20:13:57Z"
    lastUpdateTime: "2026-08-26T20:13:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-08-26T20:13:55Z"
    lastUpdateTime: "2026-08-26T20:13:57Z"
    message: ReplicaSet "dev-app-7976ddf7fb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
