K8s yaml files/recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
spec:
  replicas: 4
  strategy:
    type: Recreate
  selector:
    matchLabels:
       app: dev-app      
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: nginx
          image: devopswithcloudhub/nginx:blue
