K8s yaml files/roll-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
       app: dev-app      
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: nginx
          image: devopswithcloudhub/nginx:blue
