K8s yaml files/rollingupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
spec:
  replicas: 2
  selector:
    matchLabels:
       app: dev-app      
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: nginx
          image: devopswithcloudhub/nginx:blue
      

      # K8s will take Rolling Update as default if not specified
