K8s yaml files/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-webpage
        image: devopswithcloudhub/python_webpage:blue
        ports:
        - containerPort: 8080  # Application's container port
---
apiVersion: v1
kind: Service
metadata:
  name: python-clusterip-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80       # Service port
      targetPort: 8080 # Pod's container port
