K8s yaml files/cp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-webpage
        image: devopswithcloudhub/python_webpage:blue
        ports:
        - containerPort: 8080  # Application's container port
---
apiVersion: v1
kind: Service
metadata:
  name: python-clusterip-service
spec:
  selector:
       app: python-app  
  type: ClusterIP     
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080   



# 10.1.129.47
# 10.1.128.38
