K8s yaml files/context-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: context-ingress 
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # routing rules
  defaultBackend:
     service: 
        name: orange-service
        port:
         number: 80
  rules:
  - http:
       paths:
       - path: "/blue"
         backend:
           service:
              name: blue-service
              port:
                number: 80
         pathType: Prefix   
       - path: "/green"
         backend:
           service:
              name: green-service
              port:
                number: 80
         pathType: Prefix
