K8s yaml files/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # routing rules
  rules:
  - host: blue.mystory2u.com
    http:
        paths:
          - pathType: Prefix  
            path: "/"
            backend:
              service:
                name: blue-service
                port:
                  number: 80

  - host: green.mystory2u.com
    http:
       paths:
         -  pathType: Prefix  
            path: "/"
            backend:
              service:
                  name: green-service
                  port:
                    number: 80
  - host: orange.mystory2u.com
    http:
       paths:
         -  pathType: Prefix  
            path: "/"
            backend:
              service:
                  name: orange-service
                  port:
                    number: 80
