K8s yaml files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress 
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # routing rules
  rules:
  - http:
       paths:
       - path: "/"
         backend:
           service:
              name: blue-service
              port:
                number: 80
         pathType: Prefix
